# ElectrolyzerAPI

./: README.md  pyproject.toml
api/compile/: membrane_selector.py
api/core/: models.py
api/evaluate/: temperature_optimizer.py
electrolyzer/: main.py
electrolyzer/api/endpoints/: compile.py  evaluate.py
electrolyzer/api/v1/: compile.py  evaluate.py
electrolyzer/components/: catalyst.py  condition.py  constants.py  electrolyzer.py  membrane.py
electrolyzer/config/: electrolyzer.py
electrolyzer/core/: calculations.py  config.py  equations.py  models.py
electrolyzer/optimization/: Electrolyzer.py  constant.py  run_optimization.py  run_simulation.py  solver.py
electrolyzer/optimization/interface/: constraintcomponent.py  controlcomponent.py  costcomponent.py  statecomponent.py
electrolyzer/service/: constants.py  electrolyzer.py  membrane.py
static/: index.html
static/css/: styles.css
static/js/: scripts.js
tests/: test_compile.py  test_evaluate.py  test_service.py
webapp/: main.py
webapp/static/js/: frontend.js
webapp/templates/: index.html
