[project]
name = "electrolyzerapi"
version = "0.1.0"
description = "Digital twin API for an electrolyzer"
authors = [
    {name = "zkang"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
