[project]
name = "electrolyzerapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ZhuangKang",email = "k13659082460@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "casadi (>=3.7.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
